# gachbong

./: .gitignore  LICENSE  README.md  index.html  package.json
.github/workflows/: deploy.yml
deploy/: deploy.sh
docs/: architecture.md  core-library.md  game-logic.md  overview.md  pattern-system.md  studio.md
docs/mv/: 01-intro.md  02-hoa-chanh-saigon-retro.md
gach-bong-core/: CMakeLists.txt
gach-bong-core/include/gachbong/: board.h  geometry.h  pathfinder.h  patterns.h  renderer.h
gach-bong-core/src/: board.cpp  pathfinder.cpp  patterns.cpp
gach-bong-core/src/patterns/: geometric.cpp  geometric.h  heritage.cpp  heritage.h  nature.cpp  nature.h  pattern_helpers.cpp  pattern_helpers.h  traditional_floral.cpp  traditional_floral.h
public/: gach_bong.js  gach_bong.wasm
src/: App.tsx  strudel-web.d.ts
src/components/: Footer.tsx  GameBoard.tsx  GameMenu.tsx  GameOverModal.tsx  HeroSection.tsx  MVCard.tsx  MusicPlayer.tsx  MusicVideo.tsx  MusicVideoHoaChanh.tsx  Navbar.tsx  PatternShowcase.tsx  ScoreBoard.tsx
src/components/Studio/: AvatarGenerator.tsx  BackgroundGenerator.tsx  Gallery.tsx
src/data/: patterns.ts  resolutions.ts
src/engine/: types.ts
src/hooks/: useGameState.ts  useWasmEngine.ts
src/music/: strudelHoaChanh.ts  strudelIntro.ts
src/pages/: AboutPage.tsx  CollectionPage.tsx  GamePage.tsx  HomePage.tsx  StudioPage.tsx
src/styles/: MusicVideo.css  index.css
src/utils/: galleryStorage.ts  imageExporter.ts
tools/export_avatar/: CMakeLists.txt  main.cpp
wasm/: CMakeLists.txt
wasm/src/: canvas_renderer.cpp  canvas_renderer.h  engine.cpp
